--- a/index.html
+++ b/index.html
@@ -189,12 +189,14 @@
                     </div>
                 </div>
             </div>
-            <!-- 点位分布统计模块制作 -->
+            <!-- 分布统计模块制作 -->
             <div class="point panel">
-                <div class="liner">
+                <div class="inner">
                     <h3>点位分布统计</h3>
                     <div class="chart">
-                        <div class="pie"></div>
+                        <div class="pie">
+
+                        </div>
                         <div class="data">
                             <div class="item">
                                 <h4>320,11</h4>
@@ -215,10 +217,21 @@
                 </div>
             </div>
         </div>
-        <div class="column">2</div>
+        <div class="column">
+            <div class="map">
+                <h3>
+                    <span class="icon-cube"></span> 设备数据统计
+                </h3>
+                <div class="chart">
+                    <div class="geo"></div>
+                </div>
+            </div>
+        </div>
         <div class="column">3</div>
     </div>
     <script src="./js/index.js"></script>
+    <script src="./js/china.js"></script>
+    <script src="./js/myMap.js"></script>
 </body>
 
 </html>
